--- a/landing_example.html
+++ b/landing_example.html
@@ -56,8 +56,9 @@ html, body {
 </div>
 <div class="content">
     <h1>About</h1>
-    <p>This is going to be the about section of year in a backpack.</p>
-</div>
+    <p>We first dreamed about travelling the world in a van some three years ago, in 2013. Dream big or go home, here we are, with our backpacks discovering the beauty of America from South to North and later (hopefully) Asia.</p>
+<p>
+    </div>
 
 </body>
 </html>
