--- a/landing_example.html
+++ b/landing_example.html
@@ -2,6 +2,7 @@
 layout: default
 fontstyle: white
 ---
+<link href="/css/intro_{{ page.fontstyle }}.css" rel="stylesheet">
 
 
 <!DOCTYPE HTML>
@@ -56,8 +57,14 @@ html, body {
 </div>
 <div class="content">
     <h1>About</h1>
-    <p>We first dreamed about travelling the world in a van some three years ago, in 2013. Dream big or go home, here we are, with our backpacks discovering the beauty of America from South to North and later (hopefully) Asia.</p>
-<p>
+    <p>We first dreamed about travelling the world in a van some three years ago, in 2013. Dream big or go home so here we are today with our backpacks, discovering the beauty of America from South to North and later (hopefully) Asia.</p>
+<p>Just like kids, we got attracted by beautiful photos from across South America and Asia and we wanted to see the places ourselves. So we hit the road. </p>
+    <p>We are travelling on a low budget. We sleep in a tent, in the wild nature, behind gas stations, in people's gardens and occassionally in campsites. In cities, we stay in cheap hostels. So far, we were lucky to meet good people who let us stay at their homes and helped us to get around (many thanks to all of you who gave us a ride). 
+    We buy most of our food from the supermarket and cook it ourselves on a DIY camping stove made from beer cans. 
+        Of course, we also want to taste the local cuisine so every now and then, we treat ourselves with a good meal in a small town restaurant, fresh bread from bakeries, street food or some ice cream, good coffee or fresh juice. 
+        We find that transport is cumbersome in South America. There isn't a great infrastructure of public transportation (no trains) and you have to get around in rather expensive buses or planes. The distances are huge and the prices are higher than back home (transport is almost 50% of our costs), so we try to save money by hitchhiking, which is much longer but also more fun than taking buses - we get to chat with locals in Spanish and quite often, these rides end up being an unexpected adventure! We travel by walking, hitchhiking, buses, ferries, planes. We got a ride from a taxi driver, church charity, public bus, farmers, couples, a few truck drivers... 
+    </p>
+    <p>We are travelling without sponsors. At first, we wanted to get sponsorship, but it would be a burden and this is a trip for ourselves and our friends, families.. Corporations don't need to be everywhere. Our true sponsors are the people that help us during our trip. See them all here!</p>
     </div>
 
 </body>
