--- a/landing_example.html
+++ b/landing_example.html
@@ -64,11 +64,36 @@ html, body {
         Of course, we also want to taste the local cuisine so every now and then, we treat ourselves with a good meal in a small town restaurant, fresh bread from bakeries, street food or some ice cream, good coffee or fresh juice. 
         We find that transport is cumbersome in South America. There isn't a great infrastructure of public transportation (no trains) and you have to get around in rather expensive buses or planes. The distances are huge and the prices are higher than back home (transport is almost 50% of our costs), so we try to save money by hitchhiking, which is much longer but also more fun than taking buses - we get to chat with locals in Spanish and quite often, these rides end up being an unexpected adventure! We travel by walking, hitchhiking, buses, ferries, planes. We got a ride from a taxi driver, church charity, public bus, farmers, couples, a few truck drivers... 
     </p>
-    <p>We are travelling without sponsors. At first, we wanted to get sponsorship, but it would be a burden and this is a trip for ourselves and our friends, families.. Corporations don't need to be everywhere. Our true sponsors are the people that help us during our trip. See them all here!</p>
+    <p>We are travelling without sponsors. At first, we wanted to get sponsorship, but soon realised it would be a burden and this is a trip for ourselves and our friends, families. Corporations don't need to be everywhere... Our true sponsors are the people that help us during our trip. See them all here!</p>
     
     <p>We are travelling light. At the same time we condemned sponsorship, we decided to take only the things we really need. We didn't buy expensive electronics and only took what we already owned. That saved us a lot of money in the beginning and we won't be so sad when we loose something. For more information about our gear, look here.</p>
-    <p>We'd like to share our travel experience with you, keep an eye on this blog for new stories, images, videos and more. Cheers, Kuba and Simon</p>
+    <p>We'd like to share our travel experience with you on this blog, keep an eye on new stories, images, videos and more from our journey. Cheers, Kuba and Simon</p>
     </div>
-
+    
+<div class="container center">
+        <h1>Journal</h1>
+        <p>Three fresh posts below.</p>
+          <ul class="journal row">
+  {% for post in site.posts limit: 3 %}
+    <li class="col-md-4">
+        {% for image in site.static_files %}
+    {% if image.path contains post.img and image.path contains 'thumbnail' and image.path contains 'lead' %}
+        <a href="{{ post.url }}"><img class="postImage" src="{{ image.path }}"></a>
+    {% endif %}
+    {% endfor %}
+        <a class="normal-font" href="{{ post.url }}"><h3>{{ post.title }}</h3></a>
+        <div>On {{ post.date | date_to_long_string }} in
+    {% assign categories = post.categories %}
+  {% for category in categories %} <a class="button archive-title country-button" href="{{site.url}}/countries/#{{category|slugize}}">{{category}}</a>
+  {% unless forloop.last %}&nbsp;{% endunless %}
+  {% endfor %}
+{% for tag in post.tags %}
+        <a class="button tag-button archive-title" href="{{ site.baseurl }}/tags#{{ tag | slugify }}">{{ tag }}</a>
+		 {% endfor %}
+        <a class="normal-font" href="{{ post.url }}"><p>{{ post.excerpt | truncatewords: 18 }}</p></a>  
+    </li>
+  {% endfor %}      
+</ul>
+    </div>
 </body>
 </html>
