--- a/landing_example.html
+++ b/landing_example.html
@@ -1,8 +1,6 @@
 ---
 layout: default
-fontstyle: white
 ---
-<link href="/css/intro_{{ page.fontstyle }}.css" rel="stylesheet">
 
 
 <!DOCTYPE HTML>
@@ -25,7 +23,26 @@ html, body {
     background: url(/assets/intro_cover/cover.jpg) no-repeat 50% 50%;
     background-size:cover;
 }
-
+.logo-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+.logo-main img {
+    width: 50%;
+    max-width: 400px;
+    max-height: 400px;
+}
+.logo-main a {
+    padding: 0.25em 0.5em 0.25em 0.5em;
+    color: #f5f5f5;
+}
+a:hover {
+    color: #ff7373
+}
 .page {
     width:80%;
     margin:auto;
