--- a/landing_example.html
+++ b/landing_example.html
@@ -72,7 +72,7 @@ a:hover {
                     <p>Two backpackers discovering the wonders of south america and asia.</p>
         </div>
 </div>
-<div class="content center">
+<div class="container content center">
     <h1>About</h1>
     <p>We first dreamed about travelling the world in a van some three years ago, in 2013. Dream big or go home so here we are today with our backpacks, discovering the beauty of America from South to North and later (hopefully) Asia.</p>
 
@@ -89,7 +89,7 @@ a:hover {
     <p>We'd like to share our travel experience with you on this blog, keep an eye on new stories, images, videos and more from our journey. Cheers, Kuba and Simon</p>
     </div>
     
-<div class="container center">
+<div class="container content center">
         <h1>Journal</h1>
         <p>Three fresh posts below.</p>
           <ul class="journal row">
@@ -115,7 +115,7 @@ a:hover {
 </ul>
     </div>
 	
-	<div class="container center">
+	<div class="container content center">
 		<h1>Get in touch</h1>
 		<p>Enter your email below to receive newsletters, follow us on social media, share this travel adventure or write to us, we'd be happy to hear from you!</p>
 		<p>Also, we're sending pictures by Whatsapp, if you would like to receive them, you can send us your phone number</p>
