--- a/landing_example.html
+++ b/landing_example.html
@@ -120,5 +120,7 @@ a:hover {
 		<p>Enter your email below to receive newsletters, follow us on social media, share this travel adventure or write to us, we'd be happy to hear from you!</p>
 		<p>Also, we're sending pictures by Whatsapp, if you would like to receive them, you can send us your phone number</p>
 	</div>
+	
+	{% include signature.html %}
 </body>
 </html>
