Mr Hyde was here …

--- a/landing_example.html
+++ b/landing_example.html
@@ -70,13 +70,13 @@ a:hover {
               <a href="mailto:hello@yearinabackpack.com" id="btnMail">mail</a>
            
                 </div>
-                    <p>Two backpackers discovering the wonders of south america and asia.</p>
+                    <p>Travel blog from two backpackers discovering the wonders of south america and asia.</p>
         </div>
 </div>
 <div class="container content center">
     <h1>Our story</h1>
 
-<p>Hello! We are two friends from Prague, Kuba and Simon, who decided to travel for a year in America and Asia.</p>
+<p>Hello! We are two friends from Prague, Kuba and Simon, who decided to travel for one year. Jakub is a fresh Bristol graduate, pretty happy when with his backpack and discovering something somewhere. Simon has recently opened up a bar in Prague with his friends - he's always happy to grab beer and meet with new people. </p>
 
 <p>We saved up money from work to finance this trip. We travel on a low budget, with everything we need in our backpacks. We never know where we'd end up sleeping and our plans change often. Our travel is spontaneous, fun and punk.</p>
     
@@ -113,7 +113,7 @@ a:hover {
 	
 	<div class="container content center">
 		<h1>Get in touch</h1>
-		<p>Wow you made it all the way down here! If you find our idea interesting, sign up to our newsletter or follow us on social media, write to us or meet us... Hasta la vista, Kuba and Simon</p>
+		<p>Wow you made it all the way down here! If you find our idea interesting, sign up to our newsletter or follow us on social media, write to us or meet us? Hasta luego, Kuba and Simon</p>
 		<p>
 		
 		{% include signup.html %}
