--- a/landing_example.html
+++ b/landing_example.html
@@ -17,18 +17,24 @@ html, body {
 }
 
 .intro {
-    display:table;
+    display:block;
     width:100%;
     height: 100%;
     margin:auto;
     background: url(/assets/intro_cover/cover.jpg) no-repeat 50% 50%;
     background-size:cover;
-}
-.logo-main {
-    display: flex;
+	}
+.center-flex {
+	display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+	}
+.logo-main {
+  margin: auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
   height: 100%;
   width: 100%;
 }
