--- a/landing_example.html
+++ b/landing_example.html
@@ -17,12 +17,16 @@ html, body {
 }
 
 .intro {
-    display:block;
     width:100%;
     height: 100%;
     margin:auto;
     background: url(/assets/intro_cover/cover.jpg) no-repeat 50% 50%;
     background-size:cover;
+	text-align: center;
+  margin: auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 	}
 .center-flex {
 	display: flex;
@@ -31,6 +35,7 @@ html, body {
     justify-content: center;
 	}
 .logo-main {
+	text-align: center;
   margin: auto;
   position: relative;
   top: 50%;
