--- a/landing_example.html
+++ b/landing_example.html
@@ -22,12 +22,9 @@ html, body {
     margin:auto;
     background: url(/assets/intro_cover/cover.jpg) no-repeat 50% 50%;
     background-size:cover;
-	text-align: center;
-  margin: auto;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-	}
+    text-align: center;
+}
+	
 .center-flex {
 	display: flex;
     flex-direction: column;
@@ -35,11 +32,10 @@ html, body {
     justify-content: center;
 	}
 .logo-main {
-	text-align: center;
-  margin: auto;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100%;
   width: 100%;
 }
