--- a/landing_example.html
+++ b/landing_example.html
@@ -127,7 +127,12 @@ a:hover {
 	<div class="container content center">
 		<h1>Get in touch</h1>
 		<p>Wow you made it all the way down here! If you find our idea interesting, sign up to our newsletter or follow us on social media, write to us or meet us? Hasta luego, Kuba and Simon</p>
-		<p>
+		<ul class="list-inline">Find us on:
+    <a href="https://twitter.com/yearinabackpack" rel="nofollow" target="_blank" title="Twitter" class="button twitter-button">Twitter</a>
+    <a href="https://facebook.com/yearinabackpack" rel="nofollow" target="_blank" title="Facebook" class="button facebook-button">Facebook</a>
+    <a href="https://www.youtube.com/channel/UCILHn_zTCYgkoX3J1v9mk2A" target="_blank" title="Youtube" class="button google-button">Youtube+</a>
+    <a href="https://www.instagram.com/yearinabackpack/" target="_blank" title="Instagram" class="button" style="border: 1px #D44A4B solid;">Instagram</a>
+</ul>
 		
 		{% include signup.html %}
 	</div>
