--- a/landing_example.html
+++ b/landing_example.html
@@ -131,7 +131,9 @@ a:hover {
     <a href="https://twitter.com/yearinabackpack" rel="nofollow" target="_blank" title="Twitter" class="button twitter-button">Twitter</a>
     <a href="https://facebook.com/yearinabackpack" rel="nofollow" target="_blank" title="Facebook" class="button facebook-button">Facebook</a>
     <a href="https://www.youtube.com/channel/UCILHn_zTCYgkoX3J1v9mk2A" target="_blank" title="Youtube" class="button google-button">Youtube+</a>
-    <a href="https://www.instagram.com/yearinabackpack/" target="_blank" title="Instagram" class="button" style="border: 1px #D44A4B solid;">Instagram</a>
+    <a href="https://www.instagram.com/yearinabackpack/" target="_blank" title="Instagram" class="button" style="border: 1px #f6546a solid;">Instagram</a>
+    <a href="mailto:hello@yearinabackpack.com subject:Hello" class="button" style="border: 1px #6dc066 solid;">Email</a>
+
 </ul>
 		
 		{% include signup.html %}
