--- a/landing_example.html
+++ b/landing_example.html
@@ -130,9 +130,9 @@ a:hover {
 		<ul class="list-inline">Find us on:
     <a href="https://twitter.com/yearinabackpack" rel="nofollow" target="_blank" title="Twitter" class="button twitter-button">Twitter</a>
     <a href="https://facebook.com/yearinabackpack" rel="nofollow" target="_blank" title="Facebook" class="button facebook-button">Facebook</a>
-    <a href="https://www.youtube.com/channel/UCILHn_zTCYgkoX3J1v9mk2A" target="_blank" title="Youtube" class="button google-button">Youtube+</a>
+    <a href="https://www.youtube.com/channel/UCILHn_zTCYgkoX3J1v9mk2A" target="_blank" title="Youtube" class="button google-button">Youtube</a>
     <a href="https://www.instagram.com/yearinabackpack/" target="_blank" title="Instagram" class="button instagram-button">Instagram</a>
-    <a href="mailto:hello@yearinabackpack.com subject:Hello" class="button email-button">Email</a>
+    <a href="mailto:hello@yearinabackpack.com" class="button email-button">Email</a>
 
 </ul>
 		
