--- a/working_files/working.html
+++ b/working_files/working.html
@@ -1,3 +1,21 @@
+signup design
+
+<style type="text/css">
+.formbox-editor-766318 {margin: 0 auto;padding: 30px 40px;text-align: left;width: 100%;box-sizing: border-box;}
+.formbox-editor-766318 fieldset {border: none;margin: 0;padding: 0;position: relative;}
+.formbox-editor-766318 fieldset > input, .formbox-editor fieldset > textarea, .formbox-editable-field {margin: 10px 0;outline: none;}
+.formbox-title-766318 {background: none;border: none;color: #000;font-family: Helvetica, Arial, sans-serif;font-size: 20px;padding: 0;width: 100%;word-break: break-word;margin: 10px 0;}
+.formbox-title-766318 {border-radius: 0;min-height: 0;}
+input.formbox-field-766318 {border: 2px solid #f1f2f2;border-radius: 0;box-sizing: border-box;color: #000;font-family: Helvetica, Arial, sans-serif;font-size: 14px;padding: 15px;width: 100%;}
+input.field-error-766318 {border-color: #f15858;}
+input.formbox-button-766318 {background-color: #21292d;border-width: 0;border-style: solid;border-color: #21292d;border-radius: 8px;color: #fff;display: inline-block;font-family: Helvetica, Arial, sans-serif;font-size: 14px;font-weight: 600;padding: 15px;margin: 10px 0;text-align: center;word-break: break-all;cursor: pointer;}
+button.formbox-button-766318 {background-color: #21292d;border-width: 0;border-style: solid;border-color: #21292d;border-radius: 8px;color: #fff;display: inline-block;font-family: Helvetica, Arial, sans-serif;font-size: 14px;font-weight: 600;padding: 15px;margin: 10px 0;text-align: center;word-break: break-all;cursor: pointer;}
+.formbox-editor-766318{background-color:#ffffff !important;}
+.formbox-title-766318{font-family:Helvetica, Arial, sans-serif !important;font-size:20px !important;font-weight:bold !important;color:#10292e !important;text-align:left !important;}
+.formbox-button-766318{font-family:Helvetica, Arial, sans-serif !important;font-size:14px !important;font-weight:600 !important;color:#ffffff !important;background-color:#21292d !important;border-radius:2px !important;border-color:#21292d !important;border-width:0px !important;border-style:solid;}
+ #tdLogo766318 img{margin-botton:10px; max-width:230px;}
+</style>
+
 <!--Previous page code-->
 
 {% if page.previous.url %}
