--- a/landing_example.html
+++ b/landing_example.html
@@ -72,7 +72,7 @@ a:hover {
 <body class="nopadding">
 <div class="intro">
                 <div class="nopadding logo-main">
-                        <img src="/assets/icons/Yearinabackpack_logo{{ page.fontstyle }}.png">
+                        <img class="lazyload" src="/assets/icons/image.png">
         
           <div class="logo-main-margin list-inline">
      <a href="http://www.facebook.com/yearinabackpack" id="btnFb">facebook</a>
