--- a/landing_example.html
+++ b/landing_example.html
@@ -74,14 +74,7 @@ a:hover {
                 <div class="nopadding logo-main">
                         <img src="/assets/icons/image.png">
         
-          <div class="logo-main-margin list-inline">
-     <a href="http://www.facebook.com/yearinabackpack" id="btnFb">facebook</a>
-     <a href="http://www.twitter.com/YearinaBackpack" id="btnTw" class="socialMargin">twitter</a>
-              <a href="http://www.instagram.com/yearinabackpack" id="socialMargin btnInstagram">instagram</a>
-              <a href="mailto:hello@yearinabackpack.com" id="btnMail">mail</a>
-           
-                </div>
-                    <p>Travel blog from two backpackers discovering the wonders of south america and asia.</p>
+                    <p class="container">Travel blog from two backpackers discovering the wonders of south america and asia.</p>
         </div>
 </div>
 <div class="container content center">
