--- a/landing_example.html
+++ b/landing_example.html
@@ -74,7 +74,7 @@ a:hover {
                 <div class="nopadding logo-main">
                         <img src="/assets/icons/image.png">
         
-                    <p class="container">Travel blog from two backpackers discovering the wonders of south america and asia.</p>
+                    <p class="container">Travel blog from two Czech backpackers discovering the wonders of South America and Asia.</p>
         </div>
 </div>
 <div class="container content center">
