--- a/landing_example.html
+++ b/landing_example.html
@@ -5,7 +5,7 @@ fontstyle: 'white'
 
 
 <!DOCTYPE HTML>
-<html>
+<html class="loading">
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
