Mr Hyde was here …

--- a/landing_example.html
+++ b/landing_example.html
@@ -166,7 +166,7 @@ html.loading body {
 
 </ul>
 		
-		{% include signup.html %}
+		{% include signup_test.html %}
 	</div>
 	{% include signature.html %}
 </body>
