--- a/news.html
+++ b/news.html
@@ -29,7 +29,7 @@ thingToRemove.parentNode.removeChild("h1.referral");
 <hr>
 
 <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/videoseries?list=PLbJUT6CPazqEeOQOMkozxNCxuPeUBelE2" frameborder="0" allowfullscreen></iframe>
+    <iframe class="lazyload" data-src="https://www.youtube.com/embed/videoseries?list=PLbJUT6CPazqEeOQOMkozxNCxuPeUBelE2" frameborder="0" allowfullscreen></iframe>
     </div>
     
 
