--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@ description: "Follow our journey on a map and see where we have been."
 <div class="container fill">
     <h1 class="center">Map</h1>
     <p class="center">Follow our journey on a map. Come join us :)</p>
-    <iframe class="center-block" style="padding-bottom:2em;" id="GMaps" src="https://www.google.com/maps/d/u/2/embed?mid=1n_D3vW1uBFLTrFud5GLe5sC43Pg&z=2.25" width="80%" height="80%" frameborder="0"></iframe>  
+    <iframe class="center-block lazyload" style="padding-bottom:2em;" id="GMaps" data-src="https://www.google.com/maps/d/u/2/embed?mid=1n_D3vW1uBFLTrFud5GLe5sC43Pg&z=2.25" width="80%" height="80%" frameborder="0"></iframe>  
     
           </div>
 
