--- a/stats.html
+++ b/stats.html
@@ -11,7 +11,7 @@ description: "Book keeping and tracking our spending - you can see spending in l
       <div class="financials">
           <h3>Financials</h3>
           <h4>Budget: $6000 (200k CZK)</h4>
-          <iframe src="https://docs.google.com/spreadsheets/d/1N8HEh1r_7TlTFnWyJT7E64R9_O-X5BMRh9tINusUxfs/preview?usp=drivesdk widget=true&amp;headers=false"></iframe>
+          <iframe class="lazyload" data-src="https://docs.google.com/spreadsheets/d/1N8HEh1r_7TlTFnWyJT7E64R9_O-X5BMRh9tINusUxfs/preview?usp=drivesdk widget=true&amp;headers=false"></iframe>
           </div>
           </div>
 {% include signature.html %}
