Mr Hyde was here …

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: "Backpacking travel adventure around America and Asia."
 
 <div class="intro">
                 <div class="nopadding logo-main">
-                        <img src="/assets/icons/image.png">
+                        <img src="/assets/icons/YIAB_logo_white_medium.png">
         
                     <p class="container">Travel blog from two Czech backpackers discovering the wonders of South America and Asia.</p>
         </div>
