Mr Hyde was here …

--- a/test.html
+++ b/test.html
@@ -17,8 +17,8 @@ description: "Kuba's photos from backpacking America and Asia."
 {% unless post.layout contains 'guide' %}
           <div class="col-md-4">
       {% for image in site.static_files %}
-    {% if image.path contains post.img and image.path contains 'thumbnail' or image.path contains 'lead' limit:1 %}
-        <a href="{{ post.url }}#links"><img class="postImage lazyload" data-src="{{ image.path }}"></a>
+    {% if image.path contains post.img and image.path contains 'thumbnail' and image.path contains 'lead' %}
+        <a href="{{ post.url }}#links"><img class="postImage lazyload" data-src="{{ image.path }}" | first ></a>
     {% endif %}
     {% endfor %}
 	<h5><a href="{{ site.baseurl }}{{ post.url }}">{{ post.landmark }}, {{post.date | date_to_long_string}}</a></h5>
