Mr Hyde was here …

--- a/test.html
+++ b/test.html
@@ -17,9 +17,19 @@ description: "Kuba's photos from backpacking America and Asia."
 {% unless post.layout contains 'guide' %}
           <div class="col-md-4">
       {% for image in site.static_files %}
+{% if image.path contains post.img and image.path contains 'thumbnail' %}
 
-    {% if image.path contains post.img and image.path contains 'thumbnail' and image.path contains 'lead' or image[0] %}
+{% assign post_images = image.path[0] %}
+
+{% endif %}
+
+
+    {% if image.path contains post.img and image.path contains 'thumbnail' and image.path contains 'lead' %}
 <a href="{{ post.url }}#links"><img class="postImage lazyload" data-src="{{ image.path }}"></a>
+{% else %}
+
+<a href="{{ post.url }}#links"><img class="postImage lazyload" data-src="{{ post_images }}"></a>
+
     {% endif %}
 
     {% endfor %}
