Mr Hyde was here …

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ description: "Backpacking travel adventure around America and Asia."
         </div>
 </div>
 <div class="container content center">
-    <h1>Our story</h1>
+    <a href="/about"><h1>Our Story</h1></a>
 
 <p>Hello! We are two friends from Prague, Kuba and Simon, who decided to travel for one year.</p> 
 <p>Jakub is a fresh Bristol graduate, pretty happy when with his backpack and discovering something somewhere.</p>  
@@ -28,7 +28,7 @@ description: "Backpacking travel adventure around America and Asia."
 </div>
     
 <div class="container content center">
-        <h1>Journal</h1>
+        <a href="/journal"><h1>Journal</h1></a>
         <p>Read our latest stories or check out fresh news from the road.</p>
           <ul class="journal row">
   {% for post in site.posts limit: 3 %}
