--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@ description: "Backpacking travel adventure around America and Asia."
                 <div class="nopadding logo-main">
                         <img src="/assets/icons/YIAB_logo_black_medium.png">
         <h1>Shit!</h1>
-                    <p class="container">There was an error. Apologies! How about looking at our 	<a  href="/journal">journal</a>?</p>
+                    <p class="container">There was an error, we are sorry. How about looking at our 	<a  href="/journal">journal</a>?</p>
         </div>
 
 	{% include signature.html %}
