Mr Hyde was here …

--- a/test2.html
+++ b/test2.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /journal
+permalink: 
 title: Journal
 description: "Travel blog from Year in a backpack. Read our regular posts and enjoy the experiences and feelings from travelling in South America with us. "
 ---
