--- a/test2.html
+++ b/test2.html
@@ -12,11 +12,18 @@ description: "Travel blog from Year in a backpack. Read our regular posts and en
   {% for post in site.posts limit: 3 %}
     <li class="col-md-4">
         {% for image in site.static_files %}
-    {% if image.path contains post.img and image.path contains 'thumbnail' and image.path contains 'lead' %}
+{% case %}
+
+    {% when post.layout contains 'post' image.path contains post.img and image.path contains 'thumbnail' and image.path contains 'lead' %}
         <a href="{{ post.url }}"><img class="postImage lazyload" src="{{ image.path }}"></a>
-    {% else %}
-    <a href="{{ post.url }}"><img class="postImage lazyload" src="{{ post.lead }}"></a>
-    {% endif %}
+
+    {% when post.layout contains 'photo' image.path contains post.img and image.path contains 'thumbnail' and image.path contains 'lead' %}
+        <a href="{{ post.url }}"><img class="postImage lazyload" src="{{ image.path }}"></a>
+
+{% when post.layout contains 'guide' image.path contains post.lead %}
+        <a href="{{ post.url }}"><img class="postImage lazyload" src="{{ image.path }}"></a>
+    {% endcase %}
+
     {% endfor %}
         <a class="normal-font" href="{{ post.url }}"><h3>{{ post.title }}</h3></a>
         <div>On {{ post.date | date_to_long_string }} in
