Mr Hyde was here …

--- a/photo.html
+++ b/photo.html
@@ -14,14 +14,28 @@ description: "Kuba's photos from backpacking America and Asia."
 	  <div class="container">
     <h2 id="#{{ category_name | slugize }}" class="category-head">{{ category_name }}</h2>
 	  {% for post in site.categories[category_name] %}
+{% unless post.layout contains 'guide' %}
           <div class="col-md-4">
       {% for image in site.static_files %}
+{% if image.path contains post.img and image.path contains 'thumbnail' %}
+
+{% assign post_images = image.path[0] %}
+
+{% endif %}
+
+
     {% if image.path contains post.img and image.path contains 'thumbnail' and image.path contains 'lead' %}
-        <a href="{{ post.url }}#links"><img class="postImage lazyload" data-src="{{ image.path }}"></a>
+<a href="{{ post.url }}#links"><img class="postImage lazyload" data-src="{{ image.path }}"></a>
+{% else %}
+
+<a href="{{ post.url }}#links"><img class="postImage lazyload" data-src="{{ post_images }}"></a>
+
     {% endif %}
+
     {% endfor %}
 	<h5><a href="{{ site.baseurl }}{{ post.url }}">{{ post.landmark }}, {{post.date | date_to_long_string}}</a></h5>
 			  	  </div>
+{% endunless %}
     {% endfor %}
   </div>
 {% endfor %}
