Mr Hyde was here …

--- a/test2.html
+++ b/test2.html
@@ -6,7 +6,7 @@ description: "Kuba's photos from backpacking America and Asia."
 ---
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
 
-    <h1 class="container center">Photos</h1>
+    <h1 class="container center">Photos wtf</h1>
 
 {% assign sorted_categories = (site.categories | sort:0) %}
 {% for category in sorted_categories %}
