--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 --- 
 layout: default
-permalink: /photo
+permalink: 
 title: Photos
 description: "Kuba's photos from backpacking America and Asia."
 ---
