--- a/test.html
+++ b/test.html
@@ -10,3 +10,5 @@ description: "Kuba's photos from backpacking America and Asia."
 {{ assign photo_posts = post.url }}
 {% endif %}
 {% endfor %}
+{{ photo_posts }}
+
