--- a/test.html
+++ b/test.html
@@ -7,13 +7,12 @@ description: "Kuba's photos from backpacking America and Asia."
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
 {% for post in site.posts %}
 {% if post.layout contains 'post' or post.layout contains 'photo' %}
-{{ assign photo_posts = post.url }}
+
 {% endif %}
 {% endfor %}
-{{ photo_posts }}
 
 {% assign guides = (site.posts | where: "gallery" , "no") %}
-{% for post in guide %}
+{% for post in guides %}
 {{ post.title }}
 {% endfor %}
 
