Mr Hyde was here …

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ description: "Backpacking travel adventure around America and Asia."
                 <div class="nopadding logo-main">
                         <img src="/assets/icons/YIAB_logo_white_medium.png">
         
-                    <p class="container">Travel blog from two Czech backpackers discovering the wonders of South America and Asia.</p>
+                    <p class="container">Travel blog from backpackers discovering the wonders of America and Asia on $15 a day.</p>
         </div>
 </div>
 <div class="container content center">
