Mr Hyde was here …

--- a/map.html
+++ b/map.html
@@ -7,9 +7,12 @@ description: "Follow our journey on a map and see where we have been."
     
 <div class="container fill">
     <h1 class="center">Map</h1>
-    <p class="center">Follow our journey on a map. Come join us :)</p>
-    <iframe class="center-block lazyload" style="padding-bottom:2em;" id="GMaps" data-src="https://www.google.com/maps/d/u/2/embed?mid=1n_D3vW1uBFLTrFud5GLe5sC43Pg&z=2.25" width="80%" height="80%" frameborder="0"></iframe>  
-    
+    <p class="center, getPadding">Follow our journey on a map. Come join us :)</p>
+<h3 class="center">America</h3>
+    <iframe class="center-block lazyload" style="padding-bottom:2em;" id="GMaps" data-src="https://www.google.com/maps/d/u/2/embed?mid=1n_D3vW1uBFLTrFud5GLe5sC43Pg&z=2.25" width="80%" height="80%" frameborder="0"></iframe>
+<br>
+<h3 class="center">Asia</h3>
+  <iframe class="center-block lazyload" style="padding-bottom:2em;" id="GMaps" data-src="https://www.google.com/maps/d/u/2/embed?mid=10wYW3kLTCx49Rgw3__Y05kFQZ20&z=2.25" width="80%" height="80%" frameborder="0"></iframe>
           </div>
 
 
