fixes to footer and 404

--- a/404.html
+++ b/404.html
@@ -9,9 +9,6 @@ description: "Backpacking travel adventure around America and Asia."
 
                 <div class="nopadding logo-main">
                         <img src="/assets/icons/YIAB_logo_black_medium.png">
-        <h1>Oops</h1>
-                    <p class="container">Something went wrong.. How about taking a look at our 	<a  href="/journal">journal</a>?</p>
+        <h1 class="center white">Oops</h1>
+                    <p class="container center white">Something went wrong.. How about taking a look at our 	<a  href="/journal">journal</a>?</p>
         </div>
-
-	{% include signature.html %}
-
