updated layouts and removed analytics
-updated layout to avoid footer being displayed on default template
-removed analytics
-removed twitter from index

--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@ description: "Backpacking travel adventure around America and Asia."
 <link href="/css/intro_{{ page.fontstyle }}.css" rel="stylesheet">
 
 
-                <div class="nopadding logo-main">
-                        <img src="/assets/icons/YIAB_logo_black_medium.png">
+                <div class="nopadding logo-main center">
+                        <img src="/assets/icons/YIAB_logo_white_medium.png">
         <h1 class="center white">Oops</h1>
-                    <p class="container center white">Something went wrong.. How about taking a look at our 	<a  href="/journal">journal</a>?</p>
+        <p class="container center white">Something went wrong.. How about taking a look at our	<a class="white" href="/journal">journal</a>?</p>
         </div>
